add get user by email
